# my-toolkit

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-build.yml
app/templates/: clipboard.html  index.html
tools/: clipboard.py  video_compressor.py
